--- a/src/main/resources/templates/task/paginaModificaTask.html
+++ b/src/main/resources/templates/task/paginaModificaTask.html
@@ -57,7 +57,7 @@
         </th:block>
         </tbody>
     </table>
-    <button class="ui primary button" type="submit">Modifica Task</button>
+    <button class="ui primary button" type="submit">Aggiorna Task</button>
 </form>
 
 </table>
