Use intellij formatter and use checklist plugin

--- a/src/main/resources/templates/task/paginaDettagliTaskSupergruppo.html
+++ b/src/main/resources/templates/task/paginaDettagliTaskSupergruppo.html
@@ -40,9 +40,13 @@
             <tr class="center aligned">
                 <td colspan="4" th:text="${task.descrizione}"></td>
             </tr>
+            <tr class="center aligned">
+                <th colspan="4" th:text="'Assegnatario'+' '+'task'"></th>
+            </tr>
             <tr class="center aligned" >
                 <td colspan="4" th:if="${task.getDocumento()}!=null">
-                    <a target="_blank" th:text="${task.documento.getNome()}" th:href="@{'/repository/{idDocumento}' ( idDocumento=${task.documento.getId()})}"></a>
+                    <a target="_blank" th:text="${task.documento.getNome()}"
+                       th:href="@{'/documento/{idDocumento}' ( idDocumento=${task.documento.getId()})}"></a>
                 </td>
                 <td colspan="4" th:if="${task.getDocumento()}==null">
                     <span>Nessun documento presente</span>
