--- a/src/main/resources/templates/task/paginaModificaTask.html
+++ b/src/main/resources/templates/task/paginaModificaTask.html
@@ -48,7 +48,8 @@
         <th:block th:each="persona : ${persone}">
             <tr class="center aligned">
                 <td>
-                    <input type="radio" th:name="idPersona" path="idPersona" id="${persona.id}" th:value="${persona.id}"  th:checked="${persona.id==taskForm.idPersona}">
+                    <input type="radio" class="ui radio checkbox" th:name="idPersona" path="idPersona"
+                           id="${persona.id}" th:value="${persona.id}" th:checked="${persona.id==taskForm.idPersona}">
                 </td>
                 <td th:text="${persona.nome}"></td>
                 <td th:text="${persona.cognome}"></td>
