--- a/src/main/resources/templates/task/paginaDefinizioneTaskSupergruppo.html
+++ b/src/main/resources/templates/task/paginaDefinizioneTaskSupergruppo.html
@@ -49,7 +49,8 @@
         <th:block th:each="persona : ${persone}">
            <tr class="center aligned">
                <td>
-                   <input type="radio" th:name="idPersona" path="idPersona" th:value="${persona.id}">
+                   <input type="radio" class="ui radio checkbox" th:name="idPersona" path="idPersona"
+                          th:value="${persona.id}">
                </td>
                 <td th:text="${persona.nome}"></td>
                 <td th:text="${persona.cognome}"></td>
