--- a/src/main/resources/templates/task/paginaDettagliTaskPersonali.html
+++ b/src/main/resources/templates/task/paginaDettagliTaskPersonali.html
@@ -40,37 +40,28 @@
             <tr class="center aligned">
                 <td colspan="4" th:text="${task.descrizione}"></td>
             </tr>
-
-            <tr th:if="${( ( task.stato.equals('incompleto') )==true ) or ( ( task.stato.equals('respinto') )==true )}" class="center aligned">
+            <tr class="center aligned">
+                <th colspan="4" th:text="'Documento' + 'task'"></th>
+            </tr>
+            <tr th:if="${( ( task.stato.equals('incompleto') )==true ) or ( ( task.stato.equals('respinto') )==true )}"
+                class="center aligned">
                 <td colspan="3">
 
 
-
-                    <form th:action="@{'/taskPersonali/task_detail/{idTask}/uploadDocumento'(idTask=${task.id})}" method="post" enctype="multipart/form-data" >
-                        <label >Filename:</label>
-<!--                        <input th:if="${file}==null"type="file" name="file" />-->
+                    <form th:action="@{'/taskPersonali/task_detail/{idTask}/uploadDocumento'(idTask=${task.id})}"
+                          method="post" enctype="multipart/form-data">
+                        <label>Filename:</label>
                         <input type="file" name="file"/>
-                        <input type="submit" name="submit" value="Submit" />
+                        <input type="submit" class="ui primary button" name="submit" value="Inserisci"/>
                     </form>
-
-                    <div class="ui message success" th:if="${flagAggiunta==1}">
-                        <i class="close icon"></i>
-                        <p>Documento <span th:text="${documentoNome}"></span> caricato con successo!</span></p>
-                    </div>
-
-                    <div class="ui message negative" th:if="${flagAggiunta==2}">
-                        <i class="close icon"></i>
-                        <p><span>Errore caricamento documento</span></p>
-                    </div>
-
                 </td>
-
             </tr>
+
             <tr>
                 <td class="center aligned" colspan="3" th:if="${task.getDocumento()}!=null">
-                    <a target="_blank" th:text="${task.documento.getNome()}" th:href="@{'/repository/{idDocumento}' ( idDocumento=${task.documento.getId()})}"></a>
+                    <a target="_blank" th:text="${task.documento.getNome()}"
+                       th:href="@{'/documento/{idDocumento}' ( idDocumento=${task.documento.getId()})}"></a>
                 </td>
-<!--                <td colspan="3" th:if="${task.getDocumento()}!=null" th:text="${documento.getNome()}"></td>-->
                 </td>
                 <td class="center aligned" colspan="3" th:if="${task.getDocumento()}==null">
                     <span>Nessun documento presente</span>
@@ -78,13 +69,13 @@
 
             </tr>
 
-            <tr th:if="${( ( task.stato.equals('approvato') )==false ) and ( ( task.stato.equals('in valutazione') )==false )}" class="center aligned">
+            <tr th:if="${( ( task.stato.equals('approvato') )==false ) and ( ( task.stato.equals('in valutazione') )==false )}"
+                class="center aligned">
                 <td colspan="3">
                     <a class="ui primary button"
                        th:href="@{'/taskPersonali/task_detail/{idTask}/completa' (idTask=${task.id}) }"
                     > Completa</a>
                 </td>
-
             </tr>
 
         </th:block>
@@ -95,8 +86,17 @@
     <i class="close icon"></i>
     <p>Hai completato il Task </p>
 </div>
+
+<div class="ui message success text container" th:if="${flagAggiunta==1}">
+    <i class="close icon"></i>
+    <p>Documento <span th:text="${documentoNome}"></span> caricato con successo!</span></p>
+</div>
+<div class="ui message negative text container" th:if="${flagAggiunta==0}">
+    <i class="close icon"></i>
+    <p><span>Errore caricamento documento</span></p>
+</div>
 <script>$('.message .close')
-    .on('click', function() {
+    .on('click', function () {
         $(this)
             .closest('.message')
             .transition('fade')
