Add page for select a Persona to send document

--- a/src/main/resources/templates/fragments/fragments.html
+++ b/src/main/resources/templates/fragments/fragments.html
@@ -24,6 +24,9 @@
         <a class="item" href="/repository">
             Repository d'Ateneo
         </a>
+        <a class="item" href="/consegna">
+            Consegna
+        </a>
         <div class="right menu">
             <a class="item">Logout</a>
         </div>
