--- a/src/main/resources/templates/repository/aggiunta_documento_repository.html
+++ b/src/main/resources/templates/repository/aggiunta_documento_repository.html
@@ -11,13 +11,16 @@
 
     <h1 align="center" class="ui header">Carica documento</h1>
     <div class="ui main text container">
-
-        <form th:action="@{/repository/uploadDocumento}" method="post" enctype="multipart/form-data" >
-            <label for="file">Filename:</label>
-            <input type="file" name="file" id="file"/>
-            <input type="submit" name="submit" value="Submit" />
-        </form>
-
+        <div class="ui middle aligned center aligned grid container">
+            <form th:action="@{/repository/uploadDocumento}" method="post" enctype="multipart/form-data" >
+                <label for="file">Filename:</label>
+                <input type="file" name="file" id="file"/>
+                <button type="submit" name="submit" class="ui huge green right floated button">
+                    <i class="ui upload icon"></i>
+                    Carica
+                </button>
+            </form>
+        </div>
         <div class="ui message success" th:if="${flagAggiunta==true}">
             <i class="close icon"></i>
             <p>Documento <span th:text="${documentoNome}"></span> caricato con successo!</span></p>
