--- a/src/main/resources/templates/fragments/fragments.html
+++ b/src/main/resources/templates/fragments/fragments.html
@@ -25,7 +25,13 @@
             Repository d'Ateneo
         </a>
         <a class="item" href="/consegna">
-            Consegna
+            Consegna documento
+        </a>
+        <a class="item" href="/consegna/inviati?name=">
+            Documenti inviati
+        </a>
+        <a class="item" href="/consegna/ricevuti?name=">
+            Documenti ricevuti
         </a>
         <div class="right menu">
             <a class="item">Logout</a>
