Add control to download file

--- a/src/main/resources/templates/consegna/documenti-ricevuti.html
+++ b/src/main/resources/templates/consegna/documenti-ricevuti.html
@@ -40,8 +40,8 @@
                     </a>
                 </td>
                 <td>
-                    <span th:text="${consegna.destinatario.cognome}"></span>
-                    <span th:text="${consegna.destinatario.nome}"></span>
+                    <span th:text="${consegna.mittente.cognome}"></span>
+                    <span th:text="${consegna.mittente.nome}"></span>
                 </td>
                 <td>
                     <span th:text="${consegna.dataConsegna}"></span>
