--- a/src/main/resources/templates/fragments/fragments.html
+++ b/src/main/resources/templates/fragments/fragments.html
@@ -24,7 +24,7 @@
         <a class="item" href="/repository">
             Repository d'Ateneo
         </a>
-        <a class="item" href="/consegna">
+        <a class="item" href="/consegna/">
             Consegna documento
         </a>
         <a class="item" href="/consegna/inviati?name=">
