--- a/src/main/resources/templates/consegna/destinatari.html
+++ b/src/main/resources/templates/consegna/destinatari.html
@@ -16,17 +16,20 @@
 <div th:if="${possibiliDestinatari.size()>0}">
     <h1>Invia documento a:</h1>
     <th:block th:each="ruolo : ${possibiliDestinatari}">
-        <a class="ui button" th:href="@{/consegna/} + ${ruolo}" th:classappend="${#strings.equals(ruolo, ruoloDest)}? 'active'">
+        <a class="ui button" th:classappend="${#strings.equals(ruolo, ruoloDest)}? 'active'"
+           th:href="@{/consegna/} + ${ruolo}">
             <span th:text="${ruolo}"></span>
         </a>
     </th:block>
 </div>
 
-<th:block th:if="${destinatari!=null}">
+<th:block th:if="${destinatari.size()>0}">
     <form enctype="multipart/form-data" method="post" th:action="@{/consegna}">
         <div th:if="${destinatari.size()==1}">
             <h2 th:text="${'Destinatario: ' + destinatari.get(0).getCognome()}"></h2>
-            <input name="destinatariPost" th:value="${destinatari.get(0).getId()}" type="hidden"/>
+            <input name="destinatariPost" th:if="${flagRuolo}" th:value="${destinatari.get(0).getCognome()}"
+                   type="hidden"/>
+            <input name="destinatariPost" th:if="${!flagRuolo}" th:value="${destinatari.get(0).getId()}" type="hidden"/>
         </div>
 
         <div th:if="${destinatari.size()>1}">
@@ -43,7 +46,7 @@
             <label class="ui icon button" for="file-upload">
                 <i class="file icon"></i>
                 Carica file</label>
-            <input id="file-upload" name="file" style="display:none" type="file">
+            <input id="file-upload" name="file" required style="display:none" type="file">
         </div>
 
         <input name="submit" type="submit" value="Submit"/>
@@ -59,6 +62,7 @@
         var file = $('#file-upload')[0].files[0].name;
         $(this).prev('label').text(file);
     });
+
 </script>
 
 </body>
