--- a/src/main/resources/templates/task/tasks_supergruppo.html
+++ b/src/main/resources/templates/task/tasks_supergruppo.html
@@ -12,7 +12,7 @@
 
     <div class="ui main text container">
         <a th:if="${isResponsabile==true}" class="ui primary button"
-           th:href="@{'/gruppi/{idSupergruppo}/tasks/creaTask'( idSupergruppo=${idSupergruppo} ) }">Assegna nuovo
+           th:href="@{'/gruppi/{idSupergruppo}/tasks/create'( idSupergruppo=${idSupergruppo} ) }">Assegna nuovo
             task</a>
         <table class="ui celled table striped">
             <thead>
