Remove <script> from html file

--- a/src/main/resources/templates/gruppo/aggiunta_membro.html
+++ b/src/main/resources/templates/gruppo/aggiunta_membro.html
@@ -49,14 +49,7 @@
     </div>
 
 </div>
-<script>$('.message .close')
-    .on('click', function() {
-        $(this)
-            .closest('.message')
-            .transition('fade')
-        ;
-    })
-;</script>
+<script type="text/javascript" th:src="@{/index.js}"></script>
 
 </body>
 </html>
