--- a/src/main/resources/templates/gruppo/commissione_detail.html
+++ b/src/main/resources/templates/gruppo/commissione_detail.html
@@ -64,13 +64,6 @@
                 th:text="${responsabile.cognome}"></span></p>
     </div>
 </div>
-<script>$('.message .close')
-    .on('click', function() {
-        $(this)
-            .closest('.message')
-            .transition('fade')
-        ;
-    })
-;</script>
+<script type="text/javascript" th:src="@{/index.js}"></script>
 </body>
 </html>
