--- a/src/main/resources/templates/gruppo/gruppo_detail.html
+++ b/src/main/resources/templates/gruppo/gruppo_detail.html
@@ -66,13 +66,6 @@
             </a>
         </div>
     </div>
-    <script>$('.message .close')
-        .on('click', function() {
-            $(this)
-                .closest('.message')
-                .transition('fade')
-            ;
-        })
-    ;</script>
+    <script type="text/javascript" th:src="@{/index.js}"></script>
     </body>
 </html>
