--- a/src/main/resources/templates/gruppo/aggiunta_membro_commissione.html
+++ b/src/main/resources/templates/gruppo/aggiunta_membro_commissione.html
@@ -47,13 +47,6 @@
         <p>Non ci sono altri membri da aggiungere!</p>
     </div>
 </div>
-<script>$('.message .close')
-    .on('click', function() {
-        $(this)
-            .closest('.message')
-            .transition('fade')
-        ;
-    })
-;</script>
+<script type="text/javascript" th:src="@{/index.js}"></script>
 </body>
 </html>
