Add filter Task and Repository

--- a/src/main/resources/templates/fragments/fragments.html
+++ b/src/main/resources/templates/fragments/fragments.html
@@ -26,7 +26,7 @@
             Repository d'Ateneo
         </a>
         <div class="right menu">
-            <a class="item">Logout</a>
+            <a class="item" th:href="@{/logout}">Logout</a>
         </div>
     </div>
 </div>
