--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -17,9 +17,15 @@
 </div>
 
 
-<div class="ui button" id="div_button">
-    <a href="/dashboard">Accedi</a>
-</div>
-</body>
+<!--<div class="ui button" id="div_button">-->
+<!--    <a href="/dashboard">Accedi</a>-->
+<!--</div>-->
 
+<div class="ui button" id="div_button">
+    <a href="/login">Login</a>
+</div>
+
+
+</body>
+<script src="index.js" type="text/javascript"></script>
 </html>
