--- a/src/main/resources/templates/gruppo/gruppo_detail.html
+++ b/src/main/resources/templates/gruppo/gruppo_detail.html
@@ -44,6 +44,7 @@
                     <th>Nome</th>
                     <th>Stato</th>
                     <th></th>
+                    <th></th>
                 </tr>
                 </thead>
                 <tbody>
@@ -57,6 +58,12 @@
                         <td ><a th:href="@{'/gruppi/{id2}/commissione_detail/{id_commissione}'( id2=${supergruppo.id}, id_commissione=${commissione.id})}" class="ui primary button">
                             Visualizza dettagli
                         </a></td>
+                        <td>
+                            <a th:href="@{'/gruppi/{id_commissione}/tasks'  ( id_commissione=${commissione.id} )}"
+                               class="ui primary button">
+                                Lista task
+                            </a>
+                        </td>
                     </tr>
                 </th:block>
                 </tbody>
